--- a/config/config_pattern.ini
+++ b/config/config_pattern.ini
@@ -1,2 +1,12 @@
-[test]
-user = prex
+; server settings
+[server]
+host = *
+port = *
+
+; db settings
+[mysql]
+database = *
+user = *
+password = *
+host: localhost
+port: 3306
