--- a/config/config_pattern.ini
+++ b/config/config_pattern.ini
@@ -6,7 +6,9 @@ port = *
 ; db settings
 [mysql]
 database = *
-user = *
-password = *
-host: localhost
-port: 3306
+root_name = *
+root_password = *
+user_name = *
+user_password = *
+host = *
+port = *
