--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 aiohttp==3.7.3
 aiohttp-session==2.9.0
 aiohttp-jinja2==1.4.2
+aioredis==1.3.1
 aiomysql==0.0.21
 bcrypt==3.2.0
 cryptography==3.3.1
